--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="https://lambda-symbolics.com/og.png" />
 
     <!-- Favicon -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>%CE%BB</text></svg>" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text x='50' y='50' dominant-baseline='central' text-anchor='middle' font-family='monospace' font-weight='700' font-size='80' fill='%233fb68b'>%CE%BB</text></svg>" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
