remove no-card trial note

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             <span class="button-icon" aria-hidden="true">&nearr;</span>
             Try Hiisi Free
           </a>
-          <span class="product-cta-note">7-day free trial, no credit card required</span>
+          <span class="product-cta-note">7-day free trial</span>
         </div>
       </section>
 
